--- a/playbook.yml
+++ b/playbook.yml
@@ -10,6 +10,11 @@
     - name: Install Docker Module for Python
       ansible.builtin.pip:
         name: docker
+    - name: Create .env
+      ansible.builtin.template:
+        src: 'env.j2'
+        dest: '.env'
+        mode: 0664
 
 - name: Deploy application
   hosts: all
@@ -20,5 +25,7 @@
       community.docker.docker_container:
         name: Redmine
         image: redmine
+        restart_policy: always
         published_ports:
           - 3000:3000
+        env_file: '.env'
