--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -3,3 +3,4 @@ redmine_db_password: "{{ REDMINE_DB_PASSWORD }}"
 redmine_db_port: "{{ REDMINE_DB_PORT }}"
 redmine_db_database: "{{ REDMINE_DB_DATABASE }}"
 redmine_db_postgres: "{{ REDMINE_DB_POSTGRES }}"
+datadog_api_key: "{{ DATADOG_API_KEY }}"
