--- a/playbook.yml
+++ b/playbook.yml
@@ -32,5 +32,7 @@
 
 - name: Datadog http check
   hosts: all
+  become: true
+  remote_user: root
   roles:
     - { role: datadog.datadog, become: yes }
