--- a/playbook.yml
+++ b/playbook.yml
@@ -1,6 +1,5 @@
 - name: Prepare webservers
   hosts: all
-  gather_facts: yes
   remote_user: root
   tasks:
     - name: Install packages
@@ -18,7 +17,6 @@
 
 - name: Deploy application
   hosts: all
-  gather_facts: yes
   remote_user: root
   tasks:
     - name: Run container
@@ -32,7 +30,7 @@
 
 - name: Datadog http check
   hosts: all
-  become: true
+  become: yes
   remote_user: root
   roles:
     - { role: datadog.datadog, become: yes }
