--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -13,6 +13,6 @@ datadog_checks:
     init_config:
     instances:
       - name: Application health check status
-        url: "http://{{ ansible_facts['default_ipv4']['address'] }}:{{ app_port }}"
+        url: "http://localhost:{{ app_port }}"
         timeout: 5
         method: GET
