--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -5,14 +5,14 @@ redmine_db_database: "{{ REDMINE_DB_DATABASE }}"
 redmine_db_postgres: "{{ REDMINE_DB_POSTGRES }}"
 datadog_key: "{{ DATADOG_API_KEY }}"
 
-app_port: "3000"
-datadog_api_key: '{{ datadog_key }}'
+datadog_api_key: "{{ datadog_key }}"
+
 datadog_site: "datadoghq.com"
 datadog_checks:
   http_check:
     init_config:
     instances:
       - name: Application health check status
-        url: http://localhost:3000
+        url: "http://{{ ansible_facts['default_ipv4']['address'] }}:3000"
         timeout: 5
         method: GET
