--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -3,16 +3,15 @@ redmine_db_password: "{{ REDMINE_DB_PASSWORD }}"
 redmine_db_port: "{{ REDMINE_DB_PORT }}"
 redmine_db_database: "{{ REDMINE_DB_DATABASE }}"
 redmine_db_postgres: "{{ REDMINE_DB_POSTGRES }}"
-datadog_key: "{{ DATADOG_API_KEY }}"
+datadog_api_key: "{{ DATADOG_API_KEY }}"
 
-datadog_api_key: "{{ datadog_key }}"
-
-datadog_site: "datadoghq.com"
+datadog_api_key: "{{ datadog_api_key }}"
+datadog_site: "datadoghq.eu"
 datadog_checks:
   http_check:
     init_config:
     instances:
       - name: Application health check status
-        url: "http://{{ ansible_facts['default_ipv4']['address'] }}:3000"
+        url: "http://localhost:{{ app_port }}"
         timeout: 5
         method: GET
