--- a/group_vars/webservers/vars.yml
+++ b/group_vars/webservers/vars.yml
@@ -6,7 +6,8 @@ redmine_db_postgres: "{{ REDMINE_DB_POSTGRES }}"
 datadog_api_key: "{{ DATADOG_API_KEY }}"
 
 datadog_api_key: "{{ datadog_api_key }}"
-datadog_site: "datadoghq.eu"
+
+datadog_site: "datadoghq.com"
 datadog_checks:
   http_check:
     init_config:
